example-k8s-resources/ingress-policy-testing/foo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo 
  template:
    metadata:
      labels:
        app: foo 
    spec:
      containers:
      - name: foo 
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=foo"
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 1m
            memory: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  ports:
  - port: 80
    targetPort: 5678
    protocol: TCP
    name: http
  selector:
    app: foo
